<resources>
    <string name="app_name">Route Map</string>

    <!-- Login layout -->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="loginLabel">Entrar</string>
    <string name="registerLabel">Registrate aqui</string>

    <!-- Register layout -->
    <string name="email">Email</string>
    <string name="alias">Alias</string>
    <string name="password2">Confirmar contraseña</string>
    <string name="enviar">Confirmar</string>

    <!-- Toolbar buttons -->
    <string name="route">Ruta</string>
    <string name="filter">Filtrar</string>
    <string name="help">Ayuda</string>
    <string name="logout">Perfil</string>
    <string name="preferences">Preferencias</string>

    <!-- Personalized marker -->
    <string name="inputTypeLabel">Tipo</string>
    <string name="inputLevelLabel">Nivel</string>
    <string name="inputDescriptionLabel">Descripción</string>
    <string name="inputAuthorLabel">Autor</string>
    <string name="showTypeLabel"><b>Tipo: </b></string>
    <string name="showLevelLabel"><b>Nivel: </b></string>
    <string name="showDescriptionLabel"><b>Descripción: </b></string>
    <string name="showDateLabel"><b>Fecha: </b></string>
    <string name="showAuthorLabel"><b>Autor: </b></string>
    <string name="spinnerTypePromp">Elige un tipo</string>
    <string-array name="spinnerType">
        <item>Accidente</item>
        <item>Obras</item>
        <item>Zona Peatonal</item>
        <item>Visibilidad</item>
    </string-array>
    <string name="spinnerLevelPromp">Elige un nivel</string>
    <string-array name="spinnerLevel">
        <item>Leve</item>
        <item>Moderado</item>
        <item>Grave</item>
    </string-array>

    <!-- Filter option -->
    <string-array name="filterSpinnerType">
        <item>Todos</item>
        <item>Accidente</item>
        <item>Obras</item>
        <item>Zona Peatonal</item>
        <item>Visibilidad</item>
    </string-array>
    <string-array name="filterSpinnerLevel">
        <item>Todos</item>
        <item>Leve</item>
        <item>Moderado</item>
        <item>Grave</item>
    </string-array>
    <string name="filterAllAuthors">Todos</string>

    <string-array name="defaultTypeMap">
        <item>Normal</item>
        <item>Satelite</item>
        <item>Terreno</item>
        <item>Hibrido</item>
    </string-array>

    <string-array name="networkSpinnerType">
        <item>Wifi</item>
        <item>Datos</item>
    </string-array>

    <string-array name="daysMarkersSpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="subscriptionSpinnerType">
        <item>Desactivada</item>
        <item>Activada</item>
    </string-array>

</resources>
