<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@android:color/holo_blue_bright"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:layout_marginTop="-70dp"
        android:gravity="center_horizontal"
        android:text="@string/registerDescription">
    </TextView>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/EditTextStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/EditTextStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/user"
        android:ems="10"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/EditTextStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword">
    </EditText>

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/EditTextStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/password2"
        android:ems="10"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/enviar">
    </Button>

</LinearLayout>