<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <Spinner
        android:id="@+id/input_info_type"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        style="@style/SpinnerStyle"
        android:spinnerMode="dropdown"
        android:prompt="@string/spinnerTypePromp"
        android:entries="@array/spinnerType" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <Spinner
        android:id="@+id/input_info_level"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        style="@style/SpinnerStyle"
        android:prompt="@string/spinnerLevelPromp"
        android:entries="@array/spinnerLevel"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <EditText
        android:id="@+id/input_info_description"
        style="@style/EditTextStyleMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/inputDescriptionLabel" />

</LinearLayout>