<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:src="@drawable/route_map_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/app_name"/>


        <EditText
            android:id="@+id/user"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:ems="10"
            android:background="@drawable/edit_text_design"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:textColorHint="@drawable/selector_edit_text"
            android:drawableLeft="@drawable/ic_action_user"
            android:focusable="true">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:layout_marginTop="38dp"
            android:textAlignment="center"
            android:ems="10"
            android:textColor="@android:color/white"
            android:background="@drawable/edit_text_design"
            android:textColorHint="@drawable/selector_edit_text"
            android:drawableLeft="@drawable/ic_action_password"
            android:inputType="textPassword">
        </EditText>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="40dp"
            style="@style/ButtonStyle"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/loginLabel">
        </Button>

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="60dp"
            android:textColor="@android:color/white"
            android:text="@string/registerLabel"/>
    </LinearLayout>

</LinearLayout>